# WeldFormFEM

./: .gitignore  .gitmodules  Axisymmetric.md  CMakeCache.txt  CMakeLists.txt  DEVLOG.md  DEVLOG.txt  Makefile  README.md  Remesh.C  cmake_install.cmake  ex_1el_2d.f90  main.f90  main_beam.f90  main_contact.f90  main_cylinder.f90  main_hg.f90  main_trac.f90  test.diff  test_1.py  test_gh.py
CUDA_cxx/: CMakeLists.txt  Domain.cu  Domain.cuh  ElementData.cu  ElementData.cuh  Math.cu  Math.cuh  Matrices.cu  Mechanical.cu  NodeData.cu  NodeData.cuh  SolverVerlet.cu  main.cu
cmake/: WriteGitHash.cmake
doc/: Implicit_NR_Loop.md  Stabilization.md  algorithm.md
examples/remesh/: CMakeLists.txt  main.cpp  remesh_ex.C
f90_ver/: 10_elems.f90  CMakeLists.txt  DEVLOG.txt  beam_plastic.f90  cyl_axisym_plastic.f90  cyl_comp_fraser.f90  ex_1el_axisymm.f90  main.f90  main_beam.f90  main_contact.f90  main_cube_4el.f90  main_cube_diag.f90  main_hg.f90  main_quad.f90
f90_ver/src/: ContMesh.f90  Domain.f90  Domain_oldworks.f90  ElementData.f90  ElementData_oldworks.f90  MaterialData.f90  Math.f90  Matrices.f90  Mechanical.f90  NastranReader.cpp  NastranReader.h  NodeData.f90  SolverChungHulbert.f90  SolverKickDrift.f90  SolverRedVerlet.f90  SolverVerlet.txt  SovlerBenson.txt  vtkoutput.f90
f90_ver/src/cxx/: ContactPair.h  Domain.h  El8N3D.h  Element.h  Mesh.h  Vec3D.h
f90_ver/src/cxx/Math/: Tensor2.h
f90_ver/src_dev_new/: ContMesh.f90  Domain.f90  ElementCalcs.f90  Mechanical.f90  SolverChungHulbert.f90  SolverGreenNag.f90  SolverLeapfrog.f90  vtkoutput.f90
f90_ver/src_dev_new/cxx/: CMakeLists.txt  Domain.cpp  El4N2DPE.cpp  Node.h  SymTensor2.h  main.cpp
f90_ver/src_dev_new/cxx/Math/: SymTensor2.cpp  SymTensor2.h  Tensor2.cpp  Vec3D.cpp  Vec3D.h
f90_ver/src_dev_new/cxx/Utils/: Errors.cpp  Errors.h
refs/: deriv.py  ex12_1_generic_uvFFvp_OLD_wo_functions.py  ex12_1_generic_uvFFvp_functions.py  ex12_1_radialflow_elast.py  mesh.py  sym_deriv_g_f.py  updated-lag.py  vtu_info.py
scripts/: button_with_highlight.py  check_headers.py  entry_with_placeholder.py  job_holder.py  job_window.py  openradioss_run_script_for_linux_mpi_ps.py  remove_headers.py  run.bat  run.py  setvars.bat  weldformfem_run_script.bat
src/: 1el_2d_sig_dev_pe _orig.cpp  1el_2d_sig_dev_pe.cpp  CMakeLists.txt  CMakeLists_NEW.txt  CalcDeriv_old.C  ContMesh.f90  Contact.C  Contact.f90  Contact.f90.txt  Domain.f90  Domain_d.C  Domain_d.h  ElementCalcs.f90  ElementData.f90  MAP_TO_CHANGE.cpp  Makefile  Math.f90  Matrices.C  Matrices.f90  Matrix.h  Matrix_temp.h  Mechanical.C  Mechanical.f90  Mesh.C  MetFEMGPU  NastranReader.cpp  NastranReader.h  NodeData.f90  Precision.f90  ReMesher.C  ReMesher_MMG.C  ReMesher_mmg.C  ReMesher_new_MAP.C  Remesh_Omega_h.cpp  Solver.C  SolverBenson.f90  SolverChungHulbert.f90  SolverChungHulbert_disp.f90  SolverGreenNag.f90  SolverKickDrift.f90  (+29 more)
src/common/: CMakeLists.txt  Contact.C  Domain_d.C  Matrices.C  Matrix.h  Matrix_calcs_old.C  Matrix_temp.h  Mechanical.C  Mesh.C  NastranReader.cpp  ReMesher.C  ReMesher_NEW_broken_3D.C  ReMesher_OLD.C  ReMesher_bck_3d_orig.C  ReMesher_mesh_adapt.C  ReMesher_mmg.C  Remesh_Omega_h.cpp  Tensor3.C  Thermal.C  VTKWriter.C  Vec3D.C  WallTimer.h  amr_test2.cpp  cylinder_adapt_tst.cpp  input.C  main.C  main_1_elem_2d.C  main_1_elem_2d_tri.C  main_1_elem_3d.C  main_1_elem_3d_tetra.C  main_4_elem_3d.C  main_OLD.cpp  main_axisymm.C  main_beam.C  main_beam_contact.C  r3d.cpp  tensor3.C  test_1el_3D.cpp  test_omega_h.cpp  test_omega_h_adapt.cpp
src/cpp/: Domain_d.cpp  Domain_d.cu
src/cuda/: Domain_d.cu  Material.cuh  Matrices.cu  Matrix.cuh  Mechanical.cu  Solver.cu  Solver.cuh  SolverChungHulbert_NOT_USED.cu  cudautils.cu  cudautils.cuh
src/cxx/: CMakeLists.txt  Domain.cpp  Domain.h  El4N2DPE.h  El8N3D.cpp  Element.h  IntegrationPoint.h  Mesh.cpp  Mesh.h  Node.h  main.cpp
src/cxx/Math/: SymTensor2.h  Tensor2.h  Vec3D.h
src/explicit/: CMakeLists.txt  Domain_d.C  Matrix_calcs_old.C  Mechanical.C  ReMesher.C  ReMesher_mmg.C  Remesh_Omega_h.cpp  Solver.C  Solver_explicit.C  VTKWriter.C  cmake_install.cmake  main.C  main_1_elem_3d_tetra.C  main_4_elem_3d.C  tensor3.C
src/implicit/: CMakeLists.txt  DEVLOG.md  Domain_d.C  ForgeFormFEM.C  ImpDomain_d.C  Matrices.C  MatrixFree.h  Mechanical.C  Mesh.C  Mesh_to_del.C  PETSC_Solver.cpp  PETSC_Solver.h  PETSC_Solver_FORREF.cpp  README.md  Solver.C  Solver_Eigen.C  Solver_Eigen_UP.C  Solver_GlobalMatrix.C  Solver_GlobalMatrix_Disp.C  Solver_GlobalMatrix_Disp_OLD.C  Solver_GlobalMatrix_EPHV.C  Solver_GlobalMatrix_GreenLag.C  Solver_GlobalMatrix_QS_UP.C  Solver_GlobalMatrix_QS_martins.C  Solver_GlobalMatrix_QuasiStatic.C  Solver_Martins_NR.C  Solver_Martins_Picard.C  Solver_Martins_Picard_example.C  Solver_MatrixFree.C  Solver_QS_V.C  Solver_QS_V_NOTUSED.C  Solver_Stokes_UP_PSPG_Picard.C  Solver_Vel_UP.C  Tensor3.C  VTKWriter.C  VTKWriter.hpp  VTKWriter_tiny.hpp  add_to_cmake.txt  debug_martins_picard.txt  main.C  (+5 more)
src/implicit/include/: Domain_d.h  Matrix.h  ReMesher.h  VTKWriter.h
src/implicit/include_NO/: ImpDomain_d.h  Material.cuh  Vec3D.h  defs.h  utils.h  vector_math.h
src/include/: AdMesher.h  Domain_d.h  Function.h  Material.cuh  Mesh.h  ReMesher.h  VTKWriter.h  Vec3D.h  defs.h  double3_c.h  new_for.h  parallel_for_each.h  utils.h
src/tests/: 1el_2d_sig_dev_pe _orig.cpp  1el_2d_sig_dev_pe.cpp  dev_array.cu  device_obj.cu  matrixmul.cu
test/: CMakeLists.txt  NastranReader.cpp  NastranReader.h  addition.cpp  addition.h  func.cpp  lsdynaReader.C  lsdynaReader.h  main.f90  main_c.cpp  main_reader.cpp  string.f90  test_parallel.cpp
test/classes/: main.f90  readme.txt  shape.cpp  test.cpp
validation/: 1Elem_3D_sin_int.txt  1_Elem_2D_red_int_hg_simple_f_0.06.txt  1_Elem_3D.txt  1_Elem_3D_full_int.txt  1_Elem_3D_red_int_hg_simple_f_0.06.txt  1elem_2d_quad.txt  1elem_2d_quad_tf_1step_0.8e-5.txt  1elem_3d_red_int_f_0.06.txt  1step_red_int_cube.txt  1step_red_int_cube_hf_c_0.06.txt  2step_1elem_red_no_hg_DIV.txt  4_el_NO_hg_1e-3.txt  4_el_hg_1e-3.txt  4elem_2steps.txt  4elem_2steps_HG.txt  (+5 more)
(+94 files in other folders)
